src/app/shared/components/timeline/timeline.component.scss
h1 {
  @apply mb-0 font-700  text-yellow-3  xs:text-base md:text-2xl;
}
h2 {
  @apply font-700 text-white xs:text-sm md:text-xl;
}
p {
  @apply text-justify text-gray xs:pt-2 xs:text-base md:pt-3 md:text-lg;
}

.h-title {
  @apply flex items-center gap-1 border-solid border-red-2 text-center xs:border-0 xs:px-0 xs:pt-1 md:border-b-4 md:px-10 md:pt-8;
}

.data {
  @apply xs:block xs:pl-2 md:hidden md:pl-8;
}

.data .title {
  display: flex;
  align-items: center;
  margin-top: 1rem;
}

.data .title::before {
  content: "\2022";
  padding-right: 8px;
}

.data .paragraph {
  @apply xs:pl-1 xs:pt-2 md:pl-4 md:pt-4;
}

.dateTime {
  @apply mb-3 font-bold capitalize text-yellow-2 xs:text-xss md:text-xs;
}

.timeline {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  padding: 0 5px;
}

.timeline .border {
  @apply absolute h-full w-[2px] rounded-[1%] border-2 border-solid border-red-2;
}

.timeline .left-timeline {
  flex-direction: row-reverse;
}

.timeline .right-timeline {
  flex-direction: row;
}

.timeline .timeline-item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 8px;
}

.timeline .timeline-item .content {
  flex: 1;
  padding: 16px;
}

.timeline .timeline-item .content.text-right {
  text-align: right;
}

.timeline .timeline-item .content .title {
  display: flex;
  // align-items: center;
}

